# ihw

./: .gitignore  README.md  hie.yaml  ihw.cabal
app/test/: Spec.hs
app/test/Spec/: NaturalNumber.hs  PosProperRational.hs  PosRational.hs  PosValue.hs  Unit.hs  Utility.hs
app/test/Spec/Auction/: Trace.hs  Unit.hs  Unit.hsTEMP
src/: Anchor.hs  CompanyAddress.hs  CompanyFee.hs  Duration.hs  Equity.hs  PercentTimesTen.hs  Utility.hs
src/Auction/: AuctionSchema.hs  BidderStatus.hs  BidderStatus.hsOLD  BidderStatusUtil.hs  BidderStatusUtil.hsOLD  Bidders.hs  CertApprovals.hs  CertApprovals.hsOLD  CertRegistration.hs  CertRegistration.hsOLD  Chain.hs  Endpoints.hs  FitForApprovals.hs  FitForRegistration.hs  Offchain.hs  Onchain.hs  PayoutReport.hs  Share.hs  Status.hs  Synonyms.hs  Synonyms.hsOLD  Types.hs  TypesAuctionRedeemer.hsOLD  TypesNonCertBidderStatus.hs  Util.hs  Utility.hsOLD  ValidateBid.hsOLD
src/Lib/: NEPosValue.hs  Pkh.hs  PosProperRational.hs  PosRational.hs  PosValue.hs
src/Lib/NaturalNumber/: Extra.hs  NatGE0.hs  NatGE1.hs
